# TIM-VX-python

./: CMakeLists.txt
src/pytim/: CMakeLists.txt  readme.md
src/pytim/examples/api_test/: lenet.py  lenet_graph.json
src/pytim/examples/ops_test/: activations_test.py  conv1d_test.py  conv2d_test.py  deconv1d_test.py  deconv2d_test.py  elementwise_test.py  groupedconv2d_test.py  maxpoolwithargmax_test.py  ops_test.py  spatial_transformer_test.py
src/pytim/pytim/: __init__.py
src/pytim/pytim/frontends/: __init__.py  tflite_convert.py
src/pytim/pytim/timvx/: __init__.py  common.py  engine.py
src/pytim/src/: pytimvx.cpp  tensor_info.cpp  tensor_info.h  timvx.cpp  timvx_c_api.cpp  timvx_c_api.h  timvx_cxx_api.cpp  timvx_cxx_api.h  timvx_engine.cpp  timvx_engine.h
src/pytim/src/common/: non_copyable.h  timvx_log.cpp  timvx_log.h
src/pytim/src/timvx_ops/: activation_op.cpp  activation_op.h  addn_op.cpp  addn_op.h  arg_op.cpp  arg_op.h  batch2space_op.cpp  batch2space_op.h  batchnorm_op.cpp  batchnorm_op.h  broadcast_op.cpp  broadcast_op.h  clip_op.cpp  clip_op.h  concat_op.cpp  concat_op.h  conv1d_op.cpp  conv1d_op.h  conv2d_op.cpp  conv2d_op.h  dataconvert_op.cpp  dataconvert_op.h  deconv1d_op.cpp  deconv1d_op.h  deconv2d_op.cpp  deconv2d_op.h  depth2space_op.cpp  depth2space_op.h  dropout_op.cpp  dropout_op.h  eltwise_op.cpp  eltwise_op.h  fullyconnected_op.cpp  fullyconnected_op.h  gather_op.cpp  gather_op.h  gathernd_op.cpp  gathernd_op.h  grouped_conv2d_op.cpp  grouped_conv2d_op.h  (+73 more)
src/pytim/tools/: model_benchmark.cpp  model_compile.cpp  model_infer.cpp  timvx_model.cpp  tool_utils.cpp  tool_utils.h
